--- a/.github/workflows/main_dolistapp.yml
+++ b/.github/workflows/main_dolistapp.yml
@@ -1,6 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
+
 name: Build and deploy Node.js app to Azure Web App - DoListApp
 
 on:
@@ -19,7 +20,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '16.x'
 
       - name: npm install, build, and test
         run: |
@@ -37,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
@@ -51,6 +52,6 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'DoListApp'
-          slot-name: 'Production'
+          slot-name: 'production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_46F30799A0E94B2585DD37552713EF25 }}
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_a9179738e0d547dd8546bf78a919a7a9 }}
